--- a/EasySaveConsole/App.config
+++ b/EasySaveConsole/App.config
@@ -14,5 +14,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="DataBaseEntities" connectionString="metadata=res://*/Model.DataBaseModels.csdl|res://*/Model.DataBaseModels.ssdl|res://*/Model.DataBaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Model\Repository\DataBase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBEntities" connectionString="metadata=res://*/Model.EntityModels.csdl|res://*/Model.EntityModels.ssdl|res://*/Model.EntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Model\Repository\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
