--- a/EasySaveConsole/EasySaveConsole.csproj
+++ b/EasySaveConsole/EasySaveConsole.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Model\Model.cs" />
     <Compile Include="Model\Repository\GenericDataRepository.cs" />
     <Compile Include="Model\Repository\IGenericDataRepository.cs" />
+    <Compile Include="Model\Tools.cs" />
     <Compile Include="Model\Travail.cs">
       <DependentUpon>EntityModels.tt</DependentUpon>
     </Compile>
