--- a/EasySaveConsole/EasySaveConsole.csproj
+++ b/EasySaveConsole/EasySaveConsole.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Menu.cs" />
+    <Compile Include="View\MenuAction.cs" />
     <Compile Include="View\OneSaveMenu.cs" />
     <Compile Include="View\View.cs" />
   </ItemGroup>
