--- a/EasyConsole/EasySave.csproj
+++ b/EasyConsole/EasySave.csproj
@@ -62,7 +62,7 @@
     <Compile Include="MainMenu.xaml.cs">
       <DependentUpon>MainMenu.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\Backups.cs" />
+    <Compile Include="Model\Backup.cs" />
     <Compile Include="Model\Logs.cs" />
     <Compile Include="Model\SaveProgress.cs" />
     <Compile Include="Tools.cs" />
